--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-scaling-drawer": "^1.0.1",
     "react-native-screens": "^2.0.0-alpha.7",
     "react-native-splash-screen": "^3.2.0",
+    "react-native-timeline-flatlist": "^0.5.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
