--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.9.0",
     "react-native": "^0.61.2",
     "react-native-app-intro-slider": "^3.0.0",
+    "react-native-charts-wrapper": "^0.5.7",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.5.0",
     "react-native-reanimated": "^1.4.0",
@@ -21,6 +22,8 @@
     "react-native-scaling-drawer": "^1.0.1",
     "react-native-screens": "^2.0.0-alpha.7",
     "react-native-splash-screen": "^3.2.0",
+    "react-native-svg": "^9.13.3",
+    "react-native-svg-charts": "^5.3.0",
     "react-native-timeline-flatlist": "^0.5.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
